k3s_cluster/base/private/code/vscodium/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: private
  labels:
    app: private-code-vscodium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: private-code-vscodium
  template:
    metadata:
      labels:
        app: private-code-vscodium
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      serviceAccountName: sa
      containers:
        - name: vscodium
          image: codercom/code-server:latest
          imagePullPolicy: IfNotPresent
          # restartPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 8Gi
            limits:
              memory: 32Gi
          volumeMounts:
            - name: data
              mountPath: /home/coder # stores all user data and projects
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
