k3s_cluster/base/private/code/vscodium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: private
  labels:
    app: private-code-vscodium
spec:
  type: ClusterIP
  selector:
    app: private-code-vscodium
  ports:
    - name: web
      protocol: TCP
      port: 4433
      targetPort: 8080
