k3s_cluster/base/private/code/vscodium/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: private
  labels:
    app: private-vscodium
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`vscodium.code.private.home`)
      # middlewares:
      #   - name: private-middleware-auth-authentik
      services:
        - name: private-code-vscodium-service
          port: 4433
  # tls: {}
